--- a/.github/workflows/master_inventory-tracker-fe.yml
+++ b/.github/workflows/master_inventory-tracker-fe.yml
@@ -27,11 +27,22 @@ jobs:
           npm run build --if-present
           npm run test --if-present
       
+      # Zip Build
+      - name: Zip Release
+        # You may pin to the exact commit or the version.
+        # uses: TheDoctor0/zip-release@09336613be18a8208dfa66bd57efafd9e2685657
+        uses: TheDoctor0/zip-release@0.6.2
+        with:
+          # Filename for archive
+          filename: release.zip
+          path: ./build/*
+      
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
