--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE = "https://localhost:7118/"
+# REACT_APP_API_BASE = "https://localhost:7118/"
+REACT_APP_API_BASE = "https://inventory-tracker-be.azurewebsites.net"
