--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_BASE = "https://localhost:7118/"
-REACT_APP_API_BASE = "https://inventory-tracker-be.azurewebsites.net"
+# API_BASE = "https://localhost:7118/"
+API_BASE = "https://inventory-tracker-be.azurewebsites.net"
